Task is completed

--- a/QueueControl/QueueControl.csproj
+++ b/QueueControl/QueueControl.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IQueue.cs" />
+    <Compile Include="PersonQueue.cs" />
+    <Compile Include="QueueControl.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
